# miroapp-demo

./: .pre-commit-config.yaml  README.md  app.html  changelog.config.js  index.html
.devcontainer/: devcontainer.json
assets/: app.a2c05781.js
backend/: .env.sample  README.md  changelog.config.js  main.py  pyproject.toml  requirements.txt  sample.env  server.py
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
backend/chains/: RenkinChain.py  __init__.py
backend/customchains/: __init__.py  renkin_chain.py
backend/log/: res.20250322233223.md
backend/src/: __init__.py  app_logger.py  settings.py
backend/src/chain/: pdf_desc_chain.py
backend/src/langchain_motex/: __init__.py
backend/src/langchain_motex/base/: app_logger.py
backend/src/langchain_motex/chain/: __init__.py
backend/src/langchain_motex/util/: __init__.py
frontend/: .pre-commit-config.yaml  README.md  app.html  index.html  next.config.ts  package-lock.json  package.json  panda.config.ts  tsconfig.json
frontend/.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
frontend/app/: layout.tsx  page.tsx
frontend/app/feat_a/: page.tsx
frontend/app/home/: page.tsx
frontend/assets/: style.css
frontend/components/: APIUsageDemo.tsx.bak  GetNotes.tsx  MiroSample.tsx  SDKUsageDemo.tsx
frontend/src/: app.tsx
frontend/utils/: GetStickeyNotes.tsx  StringUtils.tsx  initMiroAPI.ts
